--- a/LeanIOS/appConfig.json
+++ b/LeanIOS/appConfig.json
@@ -17,7 +17,7 @@
     "forceUserAgent": "",
     "publicKey": "jxxwke",
     "deviceRegKey": "1bvahda1ytafk7pa9qnu0vamxg",
-    "appName": "Демо интернет магазина - Демо ",
+    "appName": "F-MART",
     "initialUrl": "http://mobile.hegow5im.beget.tech",
     "androidPackageName": "co.median.android.jxxwke",
     "iosBundleId": "co.median.ios.jxxwke",
